# HairPlugin

./: .gitignore  CMakeLists.txt  README.md
Tests/: curvestest.mtl  hairlongtest.mtl  ponytailtest.fbx  ponytailtest.mtl  testfile.hipnc
Tests/backup/: testfile_bak1.hipnc
include/: ClosestGuides.h  FeatureComputation.h  SOP_AuthoringPlugin.h  Strand.h  StrandSet.h
src/: ClosestGuides.h  ClumpOperator.h  ClusterVisualization.h  ExportManager.h  GeometryImporter.h  GuideSet.h  GuideSmoothing.h  LossComputation.h  MeshToStrands.h  SOP_AuthoringPlugin.h  SimpleOptimizer.h  Strand.h  StrandSet.h
src/cpp/: ClosestGuides.cpp  ClumpOperator.cpp  ClusterVisualization.cpp  DSO_AuthoringPlugin.cpp  ExportManager.cpp  FeatureComputation.cpp  GeometryImporter.cpp  GuideSet.cpp  GuideSmoothing.cpp  LossComputation.cpp  MeshToStrands.cpp  SOP_AuthoringPlugin.cpp  SimpleOptimizer.cpp  Strand.cpp  StrandSet.cpp
